Fri Nov 18 14:47:33 1994  Theodore Y. Ts'o  (tytso@dcl)

        * scc-proto.h, scc.h, scc_maybe.c (krb5_scc_open_file), scc_nseq.c
	(krb5_scc_next_cred), scc_store.c (krb5_scc_store), scc_read.c,
	scc_write.c:  Changes to implement SCC format version #3, which
		is architecture independent, and includes the key
		encryption type information.

Wed Nov 16 23:40:16 1994  Theodore Y. Ts'o  (tytso@dcl)

	* scc_gennew.c (krb5_scc_generate_new): Generate new ccaches using
		whatever version is marked as the default.

	* scc_read.c (krb5_scc_read_keyblock): Insert keyblock magic
		number and initialize etype value.  Also add magic numbers
		for the krb5_principal, krb5_data, krb5_address, and
		krb5_authdata structures.

Thu Oct 13 17:24:00 1994  Theodore Y. Ts'o  (tytso@maytag)

	* configure.in: Add ISODE_DEFS

Fri Sep 30 21:53:31 1994  Theodore Y. Ts'o  (tytso@dcl)

	* scc_defops.c (krb5_cc_stdio_ops):
	  scc_ops.c (krb5_scc_ops): Add placeholder for magic number

Thu Sep 22 21:38:09 1994  Theodore Y. Ts'o  (tytso@dcl)

	* scc_destry.c (krb5_scc_destroy): Make sure memory associated
		with the credentials cache is freed after it is destroyed.

Thu Aug 18 16:34:51 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* scc_retrv.c (srvname_match): Fix bug in srvname_match where so
	that the server realm is really ignored in the compare, like it's
	supposed to be.

Tue Aug  2 04:07:17 1994  Tom Yu  (tlyu@dragons-lair)

	* scc_maybe.c (krb5_scc_open_file): changed an #ifdef from
	ANSI_STDIO to HAS_SETVBUF
